# solana-splits

./: Anchor.toml  airdrop.sh  client.js  client.sh  deploy.sh  idl.json  package-lock.json
programs/split/: Cargo.toml
programs/split/src/: lib.rs
solwal/: id.json
tests/: split.js
